--- a/index.html
+++ b/index.html
@@ -66,14 +66,18 @@
     <h2>Projects</h2>
     <div class="project-container">
       <div class="project-card">
+        <img class="project-image" src="TO-DO_List.png" alt="TO-DO_List">
         <h3>To-Do List App</h3>
-        <p>Lorem ipsum dolor sit amet.</p>
+        <p>TO-DO list with add delete and clear functions</p>
         <span>HTML | CSS | JS</span>
+        <br><a href="https://todolist2082.netlify.app/">Link</a>
       </div>
       <div class="project-card">
+        <img class="project-image" src="WeatherApp.png" alt="WeatherApp">
         <h3>Weather App</h3>
-        <p>Lorem ipsum dolor sit amet.</p>
+        <p>Simple Weather App</p>
         <span>HTML | CSS | JS</span>
+        <br><a href="https://weatherapp-by-shiva-dahal.netlify.app/">Link</a>
       </div>
       <div class="project-card">
         <h3>E-commerce Website</h3>
@@ -89,7 +93,7 @@
   </section>
 
   <footer>
-    <p>Developed by Bipin Khatri &copy; 2023</p>
+    <p>Developed by Shiva Dahal</p>
   </footer>
 
   <script src="script.js"></script>
