Skill contained text changed

--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
   <section id="skills" class="skills">
     <h2>Skills</h2>
     <p>
-        It is a long established fact that a reader will be distracted by the
-        readable It is a long established reader such that is not fact that a
-        will be distracted by the readable
+        These are some skills that I have learned.
     </p>
     <div class="skills-container">
       <div class="skill-card">
