text changes in skills

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <section id="skills" class="skills">
     <h2>Skills</h2>
     <p>
-        These are some skills that I have learned.
+        These are some languages that I have learned.
     </p>
     <div class="skills-container">
       <div class="skill-card">
