Changed file structure, image and logos locations constructed semi file structure

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <button class="btn">Contact Us</button>
     </div>
     <div class="hero-image">
-      <img src="Photo.jpg" alt="Photo">
+      <img src="images/Photo.jpg" alt="Photo">
     </div>
   </section>
 
@@ -43,17 +43,17 @@
     </p>
     <div class="skills-container">
       <div class="skill-card">
-        <img class="card-image" src="html.png" alt="html">
+        <img class="card-image" src="logos/html.png" alt="html">
         <h3>HTML</h3>
         <p>Web language 1st.</p>
       </div>
       <div class="skill-card">
-        <img class="card-image" src="css-3.png" alt="css">
+        <img class="card-image" src="logos/css-3.png" alt="css">
         <h3>CSS</h3>
         <p>Style language 1st.</p>
       </div>
       <div class="skill-card">
-        <img class="card-image" src="java-script.png" alt="javascript">
+        <img class="card-image" src="logos/java-script.png" alt="javascript">
         <h3>JavaScript</h3>
         <p>Programming language 3rd.</p>
       </div>
@@ -64,14 +64,14 @@
     <h2>Projects</h2>
     <div class="project-container">
       <div class="project-card">
-        <img class="project-image" src="TO-DO_List.png" alt="TO-DO_List">
+        <img class="project-image" src="projects/TO-DO_List.png" alt="TO-DO_List">
         <h3>To-Do List App</h3>
         <p>TO-DO list with add delete and clear functions</p>
         <span>HTML | CSS | JS</span>
         <br><a href="https://todolist2082.netlify.app/">Link</a>
       </div>
       <div class="project-card">
-        <img class="project-image" src="WeatherApp.png" alt="WeatherApp">
+        <img class="project-image" src="projects/WeatherApp.png" alt="WeatherApp">
         <h3>Weather App</h3>
         <p>Simple Weather App</p>
         <span>HTML | CSS | JS</span>
