changed header, nav and hero css to better div tree

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <header>
-    <nav class="navbar">
+    <nav class="nav">
       <div class="logo"><img class="logo-image" src="—Pngtree—creative s logo_4259366.png" alt="logo"></div>
-      <ul class="nav-links active">
+      <ul>
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#projects">Projects</a></li>
